# manubot-ai-editor

./: .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: draft-release.yml  pre-commit-checks.yml  publish-pypi.yml  run-tests.yml
docs/: custom-prompts.md  env-vars.md  release-process.md
docs/example/: ai_revision-config.yaml
libs/chatgpt_editor/: editor.py  env_vars.py  models.py  utils.py
libs/manubot/ai_editor/: editor.py  env_vars.py  models.py  utils.py
libs/manubot_ai_editor/: __init__.py  editor.py  env_vars.py  exceptions.py  model_providers.py  models.py  prompt_config.py  utils.py
tests/: conftest.py  test_anthropic_model.py  test_completion_model.py  test_editor.py  test_model_basics.py  test_model_get_prompt.py  test_model_providers.py  test_model_revision.py  test_prompt_config.py
tests/config_loader_fixtures/both_prompts_config/: ai-revision-config.yaml  ai-revision-prompts.yaml  ai_revision-config.yaml  ai_revision-prompts.yaml
tests/config_loader_fixtures/conflicting_promptsfiles_matchings/: ai_revision-prompts.yaml
tests/config_loader_fixtures/only_revision_prompts/: ai_revision-prompts.yaml
tests/config_loader_fixtures/phenoplier_full/: ai-revision-prompts.yaml  ai_revision-config.yaml
tests/config_loader_fixtures/prompt_gpt3_e2e/: ai-revision-prompts.yaml
tests/config_loader_fixtures/prompt_propogation/: ai-revision-config.yaml  ai-revision-prompts.yaml  ai_revision-prompts.yaml
tests/config_loader_fixtures/single_generic_prompt/: ai-revision-config.yaml
tests/manuscripts/ccc/: 00.front-matter.md  04.00.results.md  04.10.results_comp.md  04.12.results_giant.md  08.05.methods.data.md  08.15.methods.giant.md  08.20.methods.mic.md  15.acknowledgements.md  20.00.supplementary_material.md
tests/provider_fixtures/: provider_model_engines.json  refresh_model_engines.py
tests/utils/: dir_union.py  test_dir_union.py
(+50 files in other folders)
