[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=1" ]

[tool.poetry]
name = "manubot-ai-editor"
version = "0.5.2"
description = "A Manubot plugin to revise a manuscript using GPT-3"
authors = [ "Milton Pividori <miltondp@gmail.com>" ]
maintainers = [
  "Milton Pividori",
  "Faisal Alquaddoomi",
  "Vincent Rubinetti",
  "Dave Bunten",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/manubot/manubot-ai-editor"
homepage = "https://github.com/manubot/manubot-ai-editor"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]
packages = [ { include = "manubot_ai_editor", from = "libs" } ]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-core = "^0.3.6"
langchain-openai = "^0.2.0"
pyyaml = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.3"

[tool.setuptools_scm]
root = "."
